--- a/webglTranslation/index1.css
+++ b/webglTranslation/index1.css
@@ -197,11 +197,37 @@ h1 {
 	opacity: 0;
 }
 
-.profile {
-	width: 100px; 
-	
-	position: absolute;
+.toolbar {
+	height: 50px;
+	width: 100%;
+	background-color: #2c2c2c;
+	top: 0;
+	position: fixed;
+	display: table;
+	align-items: center;
+}
 
+.toolbar_attribute { display: table-cell; color: #f4f4f4; padding: 10px; }
+.delay_attribute {opacity: 0;}
+
+.profile {
+	width: 50%;
+	max-width: 100%;
+	position: absolute;
+	padding-top: 25px;
+}
+
+.profile_description {
+	width: 50%;
+	opacity: 0;
+	padding-top: 80px;
+	postion: absolute;
+
+}
+
+.profile_description_wrapper {
+	width: 80%;
+	text-align: center;
 }
 
 .bio {
@@ -255,11 +281,16 @@ h1 {
     bottom: 5%;
 }
 
+
+
 .socialIcons {
 	padding-right: 10px;
 	height: 50px;
 	bottom: 0;
+
 }
+
+
 
 /* 
 @media only screen and (max-width: 300px) {
