--- a/css/index.css
+++ b/css/index.css
@@ -21,112 +21,22 @@ a {color: white; text-decoration: none;}
 a:hover {color: #9aa4bd;}
 
 
-#viewport {
-	width: 100%;
-	height: 100%;
-	position: fixed;
-}
+#viewport {width: 100%; height: 100%; position: fixed;}
 
-.page-wrapper {
-	padding: 0px;
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	
-  	height: 4000vh;
-}
-#container {
-	height: 4000vh;
-	position: fixed;
-}
+.page-wrapper {padding: 0px; position: absolute; left: 0; top: 0; width: 100%; height: 4000vh;}
+#container {height: 4000vh; position: fixed;}
+.downArrow{z-index: 12; bottom: 1%; right: 50%; height: 20px; position: fixed;}
 
-.downArrow{
-	z-index: 12;
-	bottom: 1%;
-	right: 50%;
-	height: 20px;
-	position: fixed;
-
-}
-
-.social_banner {
-	width: 175px;
-	left: 0px;
-	position: absolute;
-	bottom: -25px;
-	padding-bottom: 8%;
-	z-index: 20;
-}
-
+.social_banner {width: 175px; left: 0px; position: absolute; bottom: -25px; padding-bottom: 8%; z-index: 20;}
 #social_banners {display: none;}
-
 .social_banner:hover {transform: rotate(5deg); cursor: pointer;}
-
-.social_banner_small {
-	position: absolute;
-	width: 150px;
-	left: 0px;
-	padding-bottom: 8%;
-	bottom: 5%;
-}
-
-.social_banner_small:hover {
-	transform: rotate(5deg);
-	cursor: pointer; 
-}
-
-
-
-
-
-
-.shortcut_banner {
-	width: 175px;
-	right: -2px; 
-	top: 5%;
-	position: absolute;
-}
-
-
-.shortcut_banner_small {
-	width: 125px;
-	position: fixed;
-	right: 0;
-	top: 0;
-}
-
-#shortcut_banners {
-	display: none;
-}
-
-.shortcut_banner_small:hover {
-	transform: rotate(5deg);
-	cursor: pointer;
-}
-
-.shortcut_banner:hover {
-	transform: rotate(5deg);
-	cursor: pointer;
-}
-
-
-
-/*.progress-container {
-	width: 100%;
-	height: 8px;
-	background: #ccc;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	z-index: 25;
-  }
-  
-  .progress-bar {
-	height: 8px;
-	background: #2e345b;
-	width: 0%;
-  }*/
+.social_banner_small {position: absolute; width: 150px; left: 0px; padding-bottom: 8%; bottom: 5%;}
+.social_banner_small:hover {transform: rotate(5deg); cursor: pointer; }
+.shortcut_banner {width: 175px; right: -2px; top: 5%; position: absolute;}
+.shortcut_banner_small {width: 125px; position: fixed; right: 0; top: 0;}
+#shortcut_banners {display: none;}
+.shortcut_banner_small:hover {transform: rotate(5deg); cursor: pointer;}
+.shortcut_banner:hover {transform: rotate(5deg); cursor: pointer;}
 
 .headerOverview {
 	background-color: #2E345B;
@@ -145,93 +55,12 @@ a:hover {color: #9aa4bd;}
 }
 
 
-.logo {
-	width: 20%;
-	max-width: 215px;
-	animation: rotateStars 15s infinite;
-    position: absolute; 
-    z-index: 3;
-	
-	padding-right: 10px;
-	
+.logo {width: 20%; max-width: 215px; animation: rotateStars 15s infinite; position: absolute; z-index: 3; padding-right: 10px;}
 
-	
-}
-
-.entry_moto {
-	max-width: 550px;
-	width: 45%;
-	padding-top: 6vh;
-	animation: rotateStars 15s infinite;
-	padding-right: 50px;
-	position: absolute;
-}
-
-#spinnyBox { 
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding-top: 50vh;
-}
-
-.spinny {
-	position: fixed;
-	z-index: 7;
-	max-width: 40px;
-	opacity: 0;
-}
-
-
-
-
-
-h1 {
-	width: 300px;
-	padding-left: 40px;
-	color: white;
-}
-
-#text1 {
-	padding-top: 2000px;
-}
-
-.moto { 
-	position: fixed;
-	opacity: 0;
-	top: 0;
-	width: 100%;
-	align-self: center;
-	z-index: 10;
-}
-
-.on { 
-		
-	position: fixed;
-	max-width: 970%;
-	z-index: 11;
-	height: 150%;
-	opacity:0;
-	top: 0;
-}
-
-
-
-.toolbar {
-	height: 50px;
-	width: 100%;
-	background-color: #2c2c2c;
-	top: 0;
-	position: fixed;
-	display: table;
-	align-items: center;
-	z-index: 15;
-	opacity: 0;
-	
-}
-
-.toolbar_attribute { display: table-cell; color: #f4f4f4; padding: 10px; }
-.delay_attribute {opacity: 0;}
+.entry_moto {max-width: 550px; width: 45%; padding-top: 6vh; animation: rotateStars 15s infinite; padding-right: 50px; position: absolute;}
+#spinnyBox { display: flex; justify-content: center; align-items: center; padding-top: 50vh;} 
+.spinny {position: fixed; z-index: 7; max-width: 40px; opacity: 0;}
+.moto { position: fixed; opacity: 0; top: 0; width: 100%; align-self: center; z-index: 10;}
 
 
 .login {
@@ -277,43 +106,160 @@ h1 {
 
 
 
-.social {
-	height: 30px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-    z-index: 15;
-    bottom: 5%;
-}
-
-
-
-.socialIcons {
-	padding-right: 10px;
-	height: 50px;
-	bottom: 0;
-
-}
-
-
-.desktop {
-	background-image: url("../src/wallpaper.svg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 100%;
-	opacity: 0;
-	position: fixed;
-	top: 0;
-	
-}
 
 #splash_pages {display: flex; justify-content: center; align-items: center; position: fixed; height: 100%; width: 100%; content: contain; }
 .splash_page_wrapper {display: flex; justify-content: center; align-items: center; max-height: 80%;}
 #splash_context_text {width: 100%;  max-height: 75%; position: absolute;}
 .splash_img {width: 85%; max-height: 45%; margin-top: 2%; opacity: 1; position: absolute;}
 .loading_scroller { border: 1px solid #2E345B; opacity: 50%; left: 20%; bottom: 20%; z-index: 200; background: #ededed; height: 10px; max-width: 68%; width: 0%; position: absolute;}
+
+
+.desktop {background-image: url("../src/wallpaper.svg"); top: 50px; background-color: #47578a; background-size: cover; background-repeat: no-repeat; width: 100%; height: 100%; position: fixed; z-index: 0;}
+
+.desktopToolbar {width: 100%; background: #2c2c2c; height: 50px; top: 0; color: #f4f4f4; z-index: 100000; opacity: 0;}
+
+.dock_container {display: flex; justify-content: center; align-items: center; z-index: 100; opacity: 0;}
+
+.dock {bottom: 0; height: 100px; background-color: #2e345b; position: fixed; z-index: 200;}
+.dock img {height: 70px; padding: 15px; opacity: 1;}
+.dock img:hover {transform: rotate(5deg);}
+
+.tooltip {position: relative; display: inline-block;}
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #c7ccde;
+  color: #000;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {content: ""; position: absolute; top: 100%; left: 50%;}
+.tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
+
+button {background-color: #00000000; border: none;}
+button:hover {cursor: pointer;}
+
+.desktop_toolbar {width: 100%; top: 0; background-color: #2c2c2c; height: 50px; color: white; display: inline-block; overflow: hidden; position: fixed;}
+.desktop_toolbar p {display: inline-block; padding-left: 15px; }
+#desktop_toolbar_left { float: left; width: 65%; padding-right: 10px; }
+#desktop_toolbar_right {float:right; padding-right: 20px; padding-top: 5px; }
+#desktop_toolbar_right img {height: 16px; padding-right: 5px; padding-top: 5px;}
+.desktop_toolbar button {color: white; font-size: 14px; } 
+.desktop_toolbar a {color: white;}
+
+.window {background-color: #9aa4bd;  position: fixed; border:  #3A4172 1px solid; border-radius: 4px 4px 4px 4px; top: 10%; left: 5%;}
+.window_closebar {height: 30px; width: 100%; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; border-bottom: #3A4172 1px solid; text-align: center; position: sticky; z-index: 20;}
+.window_closebar p {display: inline-block;  position: relative;bottom: 8px;}
+.close_btn {top: 5px; height: 20px; left: 10px; float: left; position: absolute;}
+
+
+#about_window {top: 15%; left: 10%;}
+#about_window_content { width: 85vw; max-width: 800px; max-height: 550px; overflow-y: scroll; contain: content; }
+#about_window_content_col1 {  background: #3A4172; padding-top: 20px; color: white;  }
+#about_window_content_col2 {  overflow: scroll; overflow-x: hidden;}
+
+#about_basic {text-align: center; background: #3A4172; padding-top: 20px; color: white;}
+
+#about_window_content_col2 >* {padding-left: 30px;}
+.about_window_mission {margin: 20px; padding: 20px;background: #f4f4f4;height: 85%; width: 85%; }
+.about_window h1 {font-weight: 100;}
+
+
+#contact_window {top: 10%; left: 50%;}
+#contact_window_content {top: 40%;height: 550px; width: 400px; }
+#contact_window_content p {padding-left: 5%; padding-right: 5%;}
+#contact_window_sendbar button {bottom: 20px; position: absolute; background: #49588b; width: 100px; height: 30px; float: right; right: 20px;}
+#contact_window_content img {height: 80px; padding-left: 20px; }
+#contact_window_content img:hover {transform: rotate(5deg); cursor: pointer;}
+
+#notification {right: 0px; z-index: 20; width: 500px; top: 53px; position: fixed; display: none; animation: slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;}     
+
+#terminal_window {height: 400px; width: 80vw; max-width: 650px; background-color: #3A4172; top: 30%; }
+.done {display: block !important;}
+.terminal {padding-top: 20px;}
+#terminal_text p {display: none; font-family:'Courier New', Courier, monospace; color: white; padding-left: 2%;}
+.line {white-space: nowrap; overflow: hidden; transform: translateY(-50%); animation: typing 2.5s steps(30, end); display: block !important;}
+
+#finder_window {width: 90%; height: 80%; max-height: 700px; max-width: 90%; contain: content;  }
+#finder_window_col1 {float: left; background: #3A4172; color: white;  width: 250px; height:100%; padding-left: 10px;  overflow: auto;}
+#finder_window_col1 p {color: lightgray;} 
+#finder_window_col1 p:hover {color: white; cursor: pointer;}
+#finder_window_col2 {float: right; width: calc(100% - 260px); }
+#finder_window_col2 > * {padding-left: 8%;}
+#finder_window_col2_recents img {height: 15%; padding: 5%;}
+#finder_window_col2_recents img:hover {transform: rotate(5deg); }
+
+.hide { display: none;}
+
+.sticky {width: 300px; height: 300px; background: #9aa4bd; position: absolute; z-index: 20; text-align: center;  }
+.sticky h6 {padding-top: 20%; }
+#testimonial_window1 {top: 40%; right: 15%; background-image: url("../src/quotes1.svg"); background-size: 100% 80%; background-position: 0% 60%; background-repeat: no-repeat;}
+#testimonial_window2 {top: 45%; right: 10%; background-image: url("../src/quotes2.svg"); background-size: 100% 80%; background-position: 0% 60%; background-repeat: no-repeat;}
+#testimonial_window3 {top: 50%; right: 5%; background-image: url("../src/quotes3.svg"); background-size: 100% 80%; background-position: 0% 60%; background-repeat: no-repeat;}
+.sticky_textbox h5{display: flex; justify-content: center; align-items: center; padding-top: 10%; } 
+.sticky_textbox button {background: #3A4172; color: white; }
+.sticky_textbox button:hover {background:white; color: #3A4172;}
+
+.case {width: 90%; height: 75%; background-image: url('../src/blue_grid.svg'); background-size: cover; background-repeat: no-repeat; overflow: auto;}
+.case_content { contain:content; }
+
+
+.artboard {
+  background-color: #e8e8e8; 
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 3%;
+  text-align: left;
+  display:flex;
+  flex-wrap:wrap;
+  flex-direction:row;
+  justify-content:flex-start;
+  align-items:stretch;
+  box-shadow: 4px 4px rgba(0, 0, 0, 0.1);
+  padding-left: 40px;
+  padding-right: 20px;
+  padding-top: 10px;
+ 
+}
+
+.artboard_left {order:1;  flex-basis:100%; padding-right: 30px; text-align: left;}
+.artboard_right {order:2; flex-basis:100%; padding-top: 10px; }
+.artboard_center {width: 95%; order: 3; contain: content;}
+.artboard_center img {width: 100%;}
+
+.artboard a {color: black;}
+.artboard a:hover {color: gray;}
+
+
+@media screen and (min-width:600px) {
+  .container {flex-wrap:nowrap;} 
+  .artboard_left {flex-basis:30%; order:1;}
+  .artboard_right {flex-basis:65%; order:2;}
+  .artboard_center { order: 3;}
+}
+
+/* for large screens */
+@media all and (min-width: 800px) { 
+    #about_window_content > *{ flex: 1 auto;}  /* We tell both sidebars to share a row */
+    .about_links {text-align:center;}
+    
+}   
+@keyframes typing {from { width: 0;}to {width: 100%;}}
+@-webkit-keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
+
+
+.desktop_container img {width: 8%; position: fixed; max-width: 100px;}
+.desktop_container img:hover {transform: rotate(5deg);}
+
 
 
 /* animations  */
