--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,18 @@ body {
   font-style: normal;
 	
 }
+/* 
+html, body {
+  width: 100%; 
+  height: 100%; 
+  margin: 0; 
+}
 
+canvas {
+  width: 100vw; 
+  height: 100vh; 
+  display: block;
+} */
 
 h1 {font-family: 'fatfrank', sans-serif, bold; font-size: 2rem; }
 h2 {font-family: 'Poppins', sans-serif, normal; font-size: 1.33rem; }
@@ -117,9 +128,12 @@ a:hover {color: #9aa4bd;}
 .loading_scroller { border: 1px solid #2E345B; opacity: 50%; left: 20%; bottom: 20%; z-index: 200; background: #ededed; height: 10px; max-width: 68%; width: 0%; position: absolute;}
 
 
-.desktop {background-image: url("../src/wallpaper.svg"); top: 50px; background-color: #47578a; background-size: cover; background-repeat: no-repeat; width: 100%; height: 100%; position: fixed; z-index: 0;}
+.desktop {background-image: url("../src/wallpaper.svg"); background-size: cover; background-color: #47578a; background-repeat: no-repeat; top: 50px;  width: 100%; height: 100%; position: fixed; z-index: 0;}
 
 .desktopToolbar {width: 100%; background: #2c2c2c; height: 50px; top: 0; color: #f4f4f4; z-index: 100000; opacity: 0;}
+.desktop_toolbar_left {opacity: 0;}
+
+
 
 .dock_container {display: flex; justify-content: center; align-items: center; z-index: 100; opacity: 0;}
 
@@ -244,9 +258,9 @@ position: relative;
 
 .artboard {
   background-color: #e8e8e8; 
-  margin-top: 5%;
-  margin-left: 5%;
-  margin-right: 3%;
+  margin-top: 2%;
+  margin-left: 2%;
+  margin-right: 2%;
   text-align: left;
   display:flex;
   flex-wrap:wrap;
@@ -254,16 +268,20 @@ position: relative;
   justify-content:flex-start;
   align-items:stretch;
   box-shadow: 4px 4px rgba(0, 0, 0, 0.1);
-  padding-left: 40px;
-  padding-right: 20px;
-  padding-top: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 30px;
  
+}
+
+.artboard p {
+  font-size: 14px;
 }
 
 .artboard_left {order:1;  flex-basis:100%; padding-right: 30px; text-align: left;}
 .artboard_right {order:2; flex-basis:100%; padding-top: 10px; }
 .artboard_center {width: 95%; order: 3; contain: content;}
-.artboard_center img {width: 100%;}
+.artboard_center img {width: 100%; padding-bottom: 50px;}
 
 .artboard a {color: black;}
 .artboard a:hover {color: gray;}
