--- a/css/index.css
+++ b/css/index.css
@@ -253,51 +253,45 @@ position: relative;
 #sticky_button button:hover {background:white; color: #3A4172;}
 
 .case {width: 90%; height: 75%; background-image: url('../src/blue_grid.svg'); background-size: cover; background-repeat: no-repeat; overflow: auto;}
-.case_content { contain:content; }
+.case_content { contain:content; background-image: url('../src/grid_simple.svg'); background-color: #ececec; background-size: contain;}
 
 
-.artboard {
-  background-color: #e8e8e8; 
-  margin-top: 2%;
-  margin-left: 2%;
-  margin-right: 2%;
-  text-align: left;
-  display:flex;
-  flex-wrap:wrap;
-  flex-direction:row;
-  justify-content:flex-start;
-  align-items:stretch;
-  box-shadow: 4px 4px rgba(0, 0, 0, 0.1);
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 30px;
- 
-}
+.artboard{height: 650px; padding: 50px; }
 
-.artboard p {
-  font-size: 14px;
-}
-
-.artboard_left {order:1;  flex-basis:100%; padding-right: 30px; text-align: left;}
-.artboard_right {order:2; flex-basis:100%; padding-top: 10px; }
-.artboard_center {width: 95%; order: 3; contain: content;}
-.artboard_center img {width: 100%; padding-bottom: 50px;}
-
-.artboard a {color: black;}
+.artboard_center {width: 100%;}
+.blu {border-left: 10px solid #3a4172; padding-left: 20px; }
+.artboard h2 {font-size: 24px; font-style: italic; line-height: 30px;  opacity: 0.5; font-weight: 100;}
+.artboard h1 {font-size: 42px; }
+.artboard_date {font-style: italic; font-size: 20px;}
+.artboard img { box-shadow: 5px 5px 5px grey; margin: 1%;}
+.caption {font-style: italic; opacity: 0.75; margin-left: 1%;}
+.artboard a {color: #2d2d2d;}
 .artboard a:hover {color: gray;}
+.artboard_left, .artboard_even_left {float: left;}
+.artboard_right, .artboard_even_right {float: right;}
+.artboard_even_right, .artboard_even_left {margin: 50px 0px 50px 0px;}
+.artboard_even_right p {text-align: center; padding: 0px 30px 0px 30px}
+.artboard_nav {padding-bottom: 100px;}
 
+/* MEDIA QUERIES */
+@media screen and (min-width: 1000px ) {
+  .artboard_left { width: 30%; }
+  .artboard_right {  right: 0; width: 63%;} 
+  .artboard_even_left {width: 45%;}
+  .artboard_even_right {right: 0; width: 50%; margin-top: 100px;}  
+
+}
 
 @media screen and (min-width:600px) {
   .container {flex-wrap:nowrap;} 
-  .artboard_left {flex-basis:30%; order:1;}
-  .artboard_right {flex-basis:65%; order:2;}
-  .artboard_center { order: 3;}
+  
 }
 
 /* for large screens */
 @media all and (min-width: 800px) { 
     #about_window_content > *{ flex: 1 auto;}  /* We tell both sidebars to share a row */
     .about_links {text-align:center;}
+    
     
 }   
 @keyframes typing {from { width: 0;}to {width: 100%;}}
