--- a/css/index.css
+++ b/css/index.css
@@ -40,14 +40,16 @@ a:hover {color: #9aa4bd;}
 
 .page-wrapper {padding: 0px; position: absolute; left: 0; top: 0; width: 100%; height: 4000vh;}
 #container {height: 4000vh; position: fixed;}
-.downArrow{z-index: 12; bottom: 1%; right: 50%; height: 20px; position: fixed;}
+.downArrow{z-index: 12; bottom: 1%; right: 50%; height: 3%; position: fixed;}
 
-.social_banner {width: 225px; left: 0px; position: absolute; bottom: -25px; padding-bottom: 8%; z-index: 20;}
-#social_banners {display: none;}
+.social_banner {width: 15%; max-width: 175px; left: 0px; position: absolute; bottom: 0px; padding-bottom: 9%; z-index: 20;}
+ #social_banners {display: none;} 
 .social_banner:hover {transform: rotate(5deg); cursor: pointer;}
-.social_banner_small {position: absolute; width: 150px; left: 0px; padding-bottom: 8%; bottom: 5%;}
+.social_banner_small {position: absolute; width: 150px; left: 0px; padding-bottom: 10%; bottom: 5%;}
 .social_banner_small:hover {transform: rotate(5deg); cursor: pointer; }
-.shortcut_banner {width: 175px; right: -2px; top: 5%; position: absolute;}
+
+
+.shortcut_banner {width: 15%; max-width: 175px; right: -2px; top: 5%; position: absolute;}
 .shortcut_banner_small {width: 125px; position: fixed; right: 0; top: 0;}
 #shortcut_banners {display: none;}
 .shortcut_banner_small:hover {transform: rotate(5deg); cursor: pointer;}
@@ -272,7 +274,7 @@ position: relative;
 .artboard_right, .artboard_even_right {float: right;}
 .artboard_even_right, .artboard_even_left {margin: 50px 0px 50px 0px;}
 .artboard_even_right p {text-align: center; padding: 0px 30px 0px 30px}
-.artboard_nav {padding-bottom: 100px;}
+/* .artboard_nav {margin: 400px; position: relative; bottom: 0; } */
 
 /* MEDIA QUERIES */
 @media screen and (min-width: 1000px ) {
