--- a/css/index.css
+++ b/css/index.css
@@ -133,9 +133,10 @@ a:hover {color: #9aa4bd;}
 
 .desktop {background-image: url("../src/wallpaper.svg"); background-size: cover; background-color: #47578a; background-repeat: no-repeat; top: 50px;  width: 100%; height: 100%; position: fixed; z-index: 0;}
 
-.desktopToolbar {width: 100%; background: #2c2c2c; height: 50px; top: 0; color: #f4f4f4; z-index: 100000; opacity: 0;}
+.desktopToolbar {width: 100%; background: #2c2c2c; height: 50px; top: 0; color: #f4f4f4; z-index: 100000; opacity: 0; }
 .desktop_toolbar_left {opacity: 0;}
 
+.toolbar_hide, .toolbar_design_elixir {font-family: 'Poppins', sans-serif, normal; font-size: 1rem; line-height: 3rem; padding-right: 10px;}
 
 
 .dock_container {display: flex; justify-content: center; align-items: center; z-index: 100; opacity: 0;}
@@ -226,6 +227,7 @@ position: relative;
 #contact_window_sendbar button {bottom: 20px; position: absolute; background: #49588b; width: 100px; height: 30px; float: right; right: 20px;}
 #contact_window_content img {height: 80px; padding-left: 20px; }
 #contact_window_content img:hover {transform: rotate(5deg); cursor: pointer;}
+.mail_button {background: #2f335c; font-family: 'Poppins', sans-serif; padding: 10px; margin-left: 55%;}
 
 #notification {right: 0px; z-index: 20; width: 500px; top: 53px; position: fixed; display: none; animation: slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;}     
 
