--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+@import url("https://p.typekit.net/p.css?s=1&k=rkj0ohr&ht=tk&f=25163&a=12755813&app=typekit&e=css");
+
+@font-face {
+font-family:"fatfrank";
+src:url("https://use.typekit.net/af/746d18/000000000000000000017190/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/746d18/000000000000000000017190/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/746d18/000000000000000000017190/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+font-display:swap;font-style:normal;font-weight:400;
+}
+
+.tk-fatfrank { font-family: "fatfrank",sans-serif; }
+
 body {
 	overflow-x: hidden;
     overflow-y: scroll;
