--- a/css/index.css
+++ b/css/index.css
@@ -268,20 +268,34 @@ position: relative;
 .case {width: 90%; max-width: 1100px; height: 75%; background-image: url('../src/grid_simple.svg'); background-color: #ececec; background-size: contain; overflow: auto;}
 
 
-.artboard{height: 100%; padding: 50px; margin: 20px;  }
+
+.artboard{height: 100%; padding: 50px; }
 .artboard_center {width: 100%; padding-top: 50px;}
 .blu {border-left: 10px solid #3a4172; padding-left: 20px; }
 .artboard h2 {font-size: 24px; font-style: italic; line-height: 30px;  opacity: 0.5; font-weight: 100;}
 .artboard h1 {font-size: 42px; }
 .artboard_date {font-style: italic; font-size: 20px;}
- .artboard img { box-shadow: 5px 5px 5px grey; margin: 1%;}
+ .artboard img { box-shadow: 5px 5px 5px grey; margin: 1% 1% 0% 1%;}
 .artboard a {color: #2d2d2d;}
 .artboard a:hover {color: gray;}
 .caption {font-style: italic; opacity: 0.75; margin-left: 1%;}
 .artboard_bottom p {text-align: center; padding: 0px 30px 0px 30px} 
+.artboard_button {width: 100%; background: #2f335c; border: none; padding: 15px; margin-top: 20px;}
+.artboard_button a {color: white; text-decoration: none; font-family: 'Poppins', sans-serif;}
+.artboard_button:hover {background-color: #384272; cursor: pointer;}
+
 .artboard_column {float: left; width: 48%;  margin-right: 10px;}
+.artboard_columnthird, .artboard_columntwothird {float: left; right: 0; width: 100%;}
+/* .artboard_columntwothird {float: left; width: 100%; }
+.artboard_columnforty {float: left; width: 100%;} */
 
+@media screen and (min-width: 1200px ) {
+  .artboard_columnthird{ width: 30%; }
+  .artboard_columntwothird {right: 0; width: 66%;} 
 
+   
+
+}
 @media screen and (min-width:600px) {
   .container {flex-wrap:nowrap;} 
   
@@ -304,7 +318,7 @@ position: relative;
 
 .desktop_container img {width: 8%; position: fixed; max-width: 100px;}
 .desktop_container img:hover {transform: rotate(5deg);}
-
+/* .desktop_icons img:hover {cursor: url("../src/spinny.svg"), crosshair;} */
 
 
 /* animations  */
