--- a/css/index.css
+++ b/css/index.css
@@ -280,11 +280,11 @@ position: relative;
 .artboard a:hover {color: gray;}
 .caption {font-style: italic; opacity: 0.75; margin-left: 1%;}
 .artboard_bottom p {text-align: center; padding: 0px 30px 0px 30px} 
-.artboard_button {width: 100%; background: #2f335c; border: none; padding: 15px; margin-top: 20px;}
+.artboard_button {width: 100%; background: #2f335c; border: none; padding: 15px; margin-top: 7%; margin-bottom: 20px;}
 .artboard_button a {color: white; text-decoration: none; font-family: 'Poppins', sans-serif;}
 .artboard_button:hover {background-color: #384272; cursor: pointer;}
 
-.artboard_column {float: left; width: 48%;  margin-right: 10px;}
+.artboard_column {float: left; width: 100%;  margin-right: 10px;}
 .artboard_columnthird, .artboard_columntwothird {float: left; right: 0; width: 100%;}
 /* .artboard_columntwothird {float: left; width: 100%; }
 .artboard_columnforty {float: left; width: 100%;} */
@@ -292,7 +292,7 @@ position: relative;
 @media screen and (min-width: 1200px ) {
   .artboard_columnthird{ width: 30%; }
   .artboard_columntwothird {right: 0; width: 66%;} 
-
+  .artboard_column {width: 48%;}
    
 
 }
