add vans case study

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,8 @@ font-display:swap;font-style:normal;font-weight:400;
 
 .tk-fatfrank { font-family: "fatfrank",sans-serif; }
 
+
+
 body {
 	overflow-x: hidden;
     overflow-y: scroll;
@@ -280,22 +282,35 @@ position: relative;
 .artboard a:hover {color: gray;}
 .caption {font-style: italic; opacity: 0.75; margin-left: 1%;}
 .artboard_bottom p {text-align: center; padding: 0px 30px 0px 30px} 
-.artboard_button {width: 100%; background: #2f335c; border: none; padding: 15px; margin-top: 7%; margin-bottom: 20px;}
+.artboard_button {width: 50%; background: #2f335c; border: none; padding: 15px; margin-top: 7%; margin-bottom: 20px;}
 .artboard_button a {color: white; text-decoration: none; font-family: 'Poppins', sans-serif;}
 .artboard_button:hover {background-color: #384272; cursor: pointer;}
+.bob_motu img {width: 50%; vertical-align: middle;}
 
 .artboard_column {float: left; width: 100%;  margin-right: 10px;}
 .artboard_columnthird, .artboard_columntwothird {float: left; right: 0; width: 100%;}
-/* .artboard_columntwothird {float: left; width: 100%; }
-.artboard_columnforty {float: left; width: 100%;} */
+#vans_hide {display: none;}
+
 
 @media screen and (min-width: 1200px ) {
   .artboard_columnthird{ width: 30%; }
   .artboard_columntwothird {right: 0; width: 66%;} 
-  .artboard_column {width: 48%;}
-   
+  
+  
 
 }
+
+@media screen and (min-width: 1000px) {
+  .artboard_response_row {display: -ms-flexbox; /* IE10 */ display: flex; -ms-flex-wrap: wrap; /* IE10 */ flex-wrap: wrap; padding: 0 4px;}
+  .artboard_response_column {-ms-flex: 50%; /* IE10 */ flex: 50%; max-width: 50%; padding-right: 1%}
+  .artboard_response_column img {margin: 1% 1% 0% 1%; vertical-align: middle; width: 100%;}
+  * {
+    box-sizing: border-box;
+  }
+  #vans_hide {display: block;}
+   
+}
+
 @media screen and (min-width:600px) {
   .container {flex-wrap:nowrap;} 
   
@@ -316,7 +331,7 @@ position: relative;
 .fade-in{-webkit-animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both;animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both}
 @-webkit-keyframes fade-in{0%{opacity:0}100%{opacity:1}}@keyframes fade-in{0%{opacity:0}100%{opacity:1}}
 
-.desktop_container img {width: 8%; position: fixed; max-width: 100px;}
+.desktop_container img {width: 8%;  position: fixed; min-width: 80px; max-width: 120px;}
 .desktop_container img:hover {transform: rotate(5deg);}
 /* .desktop_icons img:hover {cursor: url("../src/spinny.svg"), crosshair;} */
 .desktop_icons button{border: none; box-shadow: none;}
